tests/fixtures/invalid/str_in_bytes.py
# Cannot use 'in' with Str and Bytes
x: bool = "hello" in b"hello"
